[package]
name = "pimoroni-picosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = {version="0.7.1", optional=true}
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
rp2040-hal = "0.5.0"
rp2040-boot2 = {version="0.2.0", optional=true}
heapless = "0.7.15"

[dev-dependencies]
defmt = "0.3.2"
defmt-rtt = "0.3.2"
embedded-graphics = "0.7.1"
st7789 = {version="0.6.1"}
nb = "1.0.0"
panic-halt = "0.2.0"
display-interface-spi = "0.4.1"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]
