[package]
name = "pimoroni-picosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = {version="0.7.3", optional=true}
embedded-hal = "0.2.7"
fugit = "0.3.6"
rp2040-hal = "0.8.0"
rp2040-boot2 = {version="0.2.1", optional=true}
heapless = "0.7.16"

[dev-dependencies]
defmt = "0.3.4"
defmt-rtt = "0.4.0"
embedded-graphics = "0.7.1"
mipidsi = "0.3.0"
nb = "1.1.0"
panic-halt = "0.2.0"
display-interface-spi = "0.4.1"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]
